--- a/css/styles.css
+++ b/css/styles.css
@@ -611,7 +611,7 @@ img {
   margin: 12px 0 0 78px;
 }
 
-.sign-up h3 {
+.sign-up {
   margin: 0 0 10px 0;
   text-transform: uppercase;
   color: #fff;
