--- a/css/styles.css
+++ b/css/styles.css
@@ -623,14 +623,42 @@ img {
 .input-email {
   width: 358px;
   height: 50px;
+  line-height: 0;
   padding-left: 1em;
+  margin-right: 12px;
   box-sizing: border-box;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-  /* transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+  transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 .input-email:focus {
   outline: 4px solid #2196f3;
+}
+
+.button-email {
+  position: relative;
+  background-color: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  font-weight: 700;
+
+  font-size: 16px;
+  line-height: 0px;
+  letter-spacing: 0.06em;
+  color: #fff;
+  width: 200px;
+  height: 50px;
+  text-align: left;
+  padding-left: 42px;
+  
+}
+
+.svg-sign-up {
+  position: absolute;
+  /* top: 13px; */
+  top: 50%;
+  transform: translateY(-50%);
+  left: 148px;
 }
