--- a/css/styles.css
+++ b/css/styles.css
@@ -605,13 +605,13 @@ img {
   width: 100%;
 }
 
-/*input index*/
+/*input index footer*/
 
 .input-email-footer {
   margin: 12px 0 0 78px;
 }
 
-.sign-up {
+.sign-up-newsletter {
   margin: 0 0 10px 0;
   text-transform: uppercase;
   color: #fff;
@@ -630,11 +630,13 @@ img {
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-  transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+  background-color: var(--footer-color);
+  color: #fff;
+  transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .input-email:focus {
-  outline: 4px solid #2196f3;
+  outline: 2px solid #2196f3;
 }
 
 .button-email {
@@ -643,22 +645,33 @@ img {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   font-weight: 700;
-
-  font-size: 16px;
-  line-height: 0px;
   letter-spacing: 0.06em;
   color: #fff;
   width: 200px;
   height: 50px;
   text-align: left;
   padding-left: 42px;
-  
+  border: 0px;
 }
+
+.button-email:active {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.15);
+  transform: translateY(1px);
+}
+
+/* pozycjionowanie ikony zapisz sie @ */
 
 .svg-sign-up {
   position: absolute;
-  /* top: 13px; */
   top: 50%;
   transform: translateY(-50%);
-  left: 148px;
+  left: 74%;
+}
+
+input::placeholder {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
 }
