--- a/css/styles.css
+++ b/css/styles.css
@@ -716,6 +716,7 @@ input::placeholder {
   height: 120px;
   width: 448px;
   resize: none;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .field label {
@@ -733,6 +734,7 @@ input::placeholder {
   margin-bottom: 10px;
   border-radius: 4px;
   width: 100%;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .svg-relative input {
