--- a/css/styles.css
+++ b/css/styles.css
@@ -741,6 +741,12 @@ input::placeholder {
   width: 100%;
 }
 
+/* hover input */
+
+input:hover + .svg-input {
+  fill: #2196f3;
+}
+
 input:hover {
   border: 1px solid #2196f3;
 }
@@ -748,6 +754,7 @@ input:hover {
 textarea:hover {
   border: 1px solid #2196f3;
 }
+
 
 /* svg z pozycja absolutna */
 .svg-input {
