--- a/css/styles.css
+++ b/css/styles.css
@@ -840,7 +840,7 @@ textarea::placeholder {
 .button-modal-submit {
   width: 200px;
   height: 50px;
-  background: var(--blue-hover)
+  background: var(--blue-hover);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   color: #fff;
