--- a/css/styles.css
+++ b/css/styles.css
@@ -392,7 +392,7 @@ img {
 }
 
 .tel:hover {
-  stroke:  var(--blue-hover);
+  stroke: var(--blue-hover);
 }
 
 .image-overlay {
@@ -654,11 +654,19 @@ img {
   border: 0px;
 }
 
+.button-email:focus{
+  border-color: var(--blue-hover);
+}
+
 .button-email:active {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.15);
   transform: translateY(1px);
 }
 
+.email-flex {
+  display: flex;
+  align-content: space-around;
+}
 /* pozycjionowanie ikony zapisz sie @ */
 
 .svg-sign-up {
@@ -696,7 +704,6 @@ input::placeholder {
 .field {
   display: flex;
   flex-direction: column;
-
   width: 100%;
   position: relative;
 }
@@ -726,10 +733,9 @@ input::placeholder {
   letter-spacing: 0.01em;
   color: var(--gray);
   margin-bottom: 4px;
-  
 }
 
-input{
+input {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -739,14 +745,15 @@ input{
   margin-bottom: 10px;
   border-radius: 4px;
   width: 100%;
-  
+  transition: fill 4250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .svg-relative input {
   width: 100%;
+  transition: fill 4250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* hover/ text area & input */
+/*hover&focus for input textarea*/
 
 input:hover + .svg-input {
   fill: var(--blue-hover);
@@ -757,6 +764,17 @@ textarea:hover {
   border: 1px solid var(--blue-hover);
 }
 
+input:focus + .svg-input {
+  fill: var(--blue-hover);
+}
+
+input:focus,
+textarea:focus {
+  border: 1px solid var(--blue-hover);
+}
+
+/*hover&focus for input textarea*/
+
 .svg-input {
   position: absolute;
   top: 50%;
@@ -764,6 +782,8 @@ textarea:hover {
   transform: translateY(-50%);
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
 
 textarea::placeholder {
   font-weight: 400;
