--- a/css/styles.css
+++ b/css/styles.css
@@ -632,11 +632,11 @@ img {
   border-radius: 4px;
   background-color: var(--footer-color);
   color: #fff;
-  transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .input-email:focus {
-  outline: 2px solid var(--blue-hover);
+  border: 1px solid var(--blue-hover);
 }
 
 .button-email {
@@ -745,7 +745,7 @@ input {
   margin-bottom: 10px;
   border-radius: 4px;
   width: 100%;
-  transition: fill 4250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .svg-relative input {
