--- a/css/styles.css
+++ b/css/styles.css
@@ -609,6 +609,7 @@ img {
 
 .input-email-footer {
   margin: 12px 0 0 78px;
+  outline: none;
 }
 
 .sign-up-newsletter {
@@ -637,6 +638,7 @@ img {
 
 .input-email:focus {
   border: 1px solid var(--blue-hover);
+  outline: none;
 }
 
 .button-email {
@@ -781,6 +783,7 @@ textarea:focus {
   left: 15px;
   transform: translateY(-50%);
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  outline: none;
 }
 
 
@@ -872,4 +875,9 @@ textarea::placeholder {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+
+input, textarea {
+  outline: none;
 }
